syntax = "proto3";

option csharp_namespace = "Protos.Actions.GetAction";

package getaction;

import "google/type/datetime.proto";
import "google/type/latlng.proto";

message GetActionResponse {
  string Id = 1;
  google.type.DateTime Created = 2;
  string Name = 3;
  string Description = 4;
  string ContactMail = 5;
  TermDto Term = 6;
  AddressDto Address = 7;
  repeated RaceDto Races = 8;
  ActionSaleDto Sale = 9;
  string TypeId = 10;
  repeated string DetailsCanSee = 11;
  repeated string ResultsCanEdit = 12;
  repeated string CompetitorsCanEdit = 13;
  repeated string ActionCanEdit = 14;
}

message CheckpointDto {
  string Id = 1;
  string Name = 2;
  google.type.LatLng Position = 3;
}

message RaceDto {
  string Id = 1;
  string Name = 2;
  double Distance = 3;
  double Incline = 4;
  google.type.DateTime EnteringFrom = 5;
  google.type.DateTime EnteringTo = 6;
  int32 MaxNumberOfCompetitors = 7;
  google.type.DateTime Begin = 8;
  google.type.DateTime End = 9;
  repeated CategoryDto Categories = 10;
  repeated PaymentDefinitionDto Payments = 11;
  LimitsDto Limits = 12;
  repeated CheckpointDto Checkpoints = 13;
}

message CategoryDto {
  string Id = 1;
  string Name = 2;
  string Description = 3;
  repeated RacerDto Racers = 4;
}

enum RaceState {
  NotSpecified = 0;
  NotStarted = 1;
  Started = 2;
  Finished = 3;
  DidNotFinished = 4;
  Disqualified = 5;
}

message RacerDto {
  string Id = 1;
  string CompetitorId = 2;
  string CheckpointData = 3;
  string FirstName = 4;
  string LastName = 5;
  string Phone = 6;
  string Email = 7;
  repeated PetDto Pets = 8;
  google.type.DateTime Start = 9;
  google.type.DateTime Finish = 10;
  RaceState State = 11;
  bool Accepted = 12;
  google.type.DateTime AcceptedDate = 13;
  bool Payed = 14;
  google.type.DateTime PayedDate = 15;
  repeated PaymentDto Payments = 16;
  repeated NoteDto Notes = 17;
  RequestedPaymentsDto RequestedPayments = 18;
  repeated MerchandizeItemDto Merchandize = 19;
  AddressDto Address = 20;
  repeated PassedCheckpointDto PassedCheckpoints = 21;
}

message PassedCheckpointDto {
  string Id = 1;
  google.type.DateTime Passed = 2;
  google.type.LatLng Position = 3;
}

message NoteDto {
  google.type.DateTime Time = 1;
  string Text = 2;
}

message PetDto {
  string Id = 1;
  string UserId = 2;
  string Name = 3;
  string Kennel = 4;
  string Pedigree = 5;
  string Chip = 6;
  google.type.DateTime Birthday = 7;
  string UriToPhoto = 8;
  string Contact = 9;
}

message RequestedPaymentsDto {
  string VariableNumber = 1;
  double Sum = 2;
  repeated RequestedPaymentItem Items = 3;
}

message RequestedPaymentItem {
  string Name = 1;
  double Price = 2;
  string Currency = 3;
}

message PaymentDto {
  google.type.DateTime Date = 1;
  double Amount = 2;
  string Currency = 3;
  string BankAccount = 4;
  string Note = 5;
}

message MerchandizeItemDto {
  string Id = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  string Currency = 5;
  string Variant = 6;
  string Size = 7;
  string Color = 8;
  string Note = 9;
  int32 Count = 10;
}

message PaymentDefinitionDto {
  string Id = 1;
  string BankAccount = 2;
  google.type.DateTime From = 3;
  google.type.DateTime To = 4;
  double Price = 5;
  string Currency = 6;
}

message LimitsDto {
  int32 MinimalAgeOfRacerInDayes = 1;
  int32 MinimalAgeOfThePetInDayes = 2;
  bool WithPets = 3;
}

message TermDto {
  google.type.DateTime From = 1;
  google.type.DateTime To = 2;
}

message AddressDto {
  string Country = 1;
  string Region = 2;
  string ZipCode = 3;
  string City = 4;
  string Street = 5;
  google.type.LatLng Position = 6;
}

message ActionSaleDto {
  repeated ActionSaleItemDto Items = 1;
}

message ActionSaleItemDto {
  string Id = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  string Currency = 5;
  repeated string Variants = 6;
  repeated string Sizes = 7;
  repeated string Colors = 8;
}